--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,6 +5,9 @@
         <h2 class="text-center text-success mb-4"><i class="bi bi-box-arrow-in-right"></i> Login</h2>
         <form method="post">
             {% csrf_token %}
+            {% if request.GET.next %}
+                <input type="hidden" name="next" value="{{ request.GET.next }}">
+            {% endif %}
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" name="username" required>
