--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -19,7 +19,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
     <div class="container-fluid">
-        <a class="navbar-brand d-flex align-items-center" href="{% url 'popular_observations' %}">
+        <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
             <img src="https://img.icons8.com/color/48/000000/leaf.png" width="32" class="me-2"/>
             <span>BioScout</span>
         </a>
@@ -30,7 +30,8 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 {% if user.is_authenticated %}
                     <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">{% if request.session.language == 'ur' %}پروفائل{% else %}Profile{% endif %}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'observation_list' %}">{% if request.session.language == 'ur' %}مشاہدات{% else %}Observations{% endif %}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">{% if request.session.language == 'ur' %}مشاہدات{% else %}Observations{% endif %}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'dashboard' %}">{% if request.session.language == 'ur' %}ڈیش بورڈ{% else %}Dashboard{% endif %}</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'rag_qa' %}">{% if request.session.language == 'ur' %}سوالات{% else %}Q&amp;A{% endif %}</a></li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">{% if request.session.language == 'ur' %}لاگ آؤٹ{% else %}Logout{% endif %}</a></li>
                 {% else %}
