--- a/observations/templates/observations/dashboard.html
+++ b/observations/templates/observations/dashboard.html
@@ -120,6 +120,7 @@
                     <h5 class="card-title text-success mb-3">
                         <i class="bi bi-check-circle"></i> Observations Needing Validation
                     </h5>
+                    {% if observations_needing_validation %}
                     <div class="table-responsive">
                         <table class="table table-hover">
                             <thead class="table-success">
@@ -134,7 +135,11 @@
                             <tbody>
                                 {% for obs in observations_needing_validation %}
                                 <tr>
-                                    <td>{{ obs.species_name }}</td>
+                                    <td>
+                                        <a href="{% url 'observation_detail' obs.pk %}" class="text-decoration-none">
+                                            {{ obs.species_name }}
+                                        </a>
+                                    </td>
                                     <td>{{ obs.user }}</td>
                                     <td>{{ obs.date_observed }}</td>
                                     <td>
@@ -155,6 +160,16 @@
                             </tbody>
                         </table>
                     </div>
+                    {% else %}
+                    <div class="text-center py-4">
+                        <i class="bi bi-check-circle text-success" style="font-size: 3rem;"></i>
+                        <h5 class="mt-3 text-muted">No observations need validation</h5>
+                        <p class="text-muted">You've validated all available observations or there are no new observations to validate.</p>
+                        <a href="{% url 'observation_list' %}" class="btn btn-outline-success mt-2">
+                            <i class="bi bi-binoculars"></i> Browse All Observations
+                        </a>
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
