--- a/users/templates/welcome.html
+++ b/users/templates/welcome.html
@@ -58,7 +58,7 @@
     <h2 class="section-title text-center"><i class="bi bi-stars"></i> Featured Observations</h2>
     <div id="featuredCarousel" class="carousel slide mb-5" data-bs-ride="carousel">
         <div class="carousel-inner">
-            {% for obs_pair in featured_observations|slice:":"|make_list|batch:2 %}
+            {% for obs_pair in featured_observation_pairs %}
             <div class="carousel-item {% if forloop.first %}active{% endif %}">
                 <div class="row justify-content-center align-items-center">
                     {% for obs in obs_pair %}
